[gd_scene load_steps=18 format=3 uid="uid://b6idknklacj8v"]

[ext_resource type="Texture2D" uid="uid://beljn1w1haf1q" path="res://Assets/Tile_02.png" id="1_chi5k"]
[ext_resource type="Texture2D" uid="uid://c2e8rg04pnrhi" path="res://Assets/Free-Mountain-Backgrounds-Pixel-Art9.png" id="2_fa256"]
[ext_resource type="PackedScene" uid="uid://qijcjx6cmcoi" path="res://Scenes/main_character.tscn" id="3_x35cg"]
[ext_resource type="Script" uid="uid://msx4c7k0vbg1" path="res://Scripts/RockSpawner.gd" id="4_6li3k"]
[ext_resource type="Texture2D" uid="uid://b2yh6uyeyv3ma" path="res://Assets/Tile_30.png" id="4_iqrwy"]
[ext_resource type="Script" uid="uid://c1vgog3tajosk" path="res://Scenes/Camera2D.gd" id="4_n5s3k"]
[ext_resource type="Texture2D" uid="uid://d3qjw810hlikf" path="res://Assets/full health.png" id="5_0t2dc"]
[ext_resource type="Texture2D" uid="uid://k7n7td2fclyg" path="res://Assets/Tile_14.png" id="5_qtvwi"]
[ext_resource type="Texture2D" uid="uid://bv4i4lxlao136" path="res://Assets/first Hit.png" id="6_nrhpg"]
[ext_resource type="Script" uid="uid://dcyeippakttcv" path="res://Scenes/high_score.gd" id="7_7btox"]
[ext_resource type="Texture2D" uid="uid://rf7rml4857us" path="res://Assets/second hit.png" id="7_a077b"]
[ext_resource type="Script" uid="uid://dvwouitn2jr0e" path="res://Scenes/FloorSpawner.gd" id="7_qkw54"]
[ext_resource type="Texture2D" uid="uid://yax4b6flqnfm" path="res://Assets/third hit.png" id="8_q463n"]
[ext_resource type="Theme" uid="uid://d213qxnwhb3cj" path="res://Fonts/title_theme.tres" id="10_j6osf"]
[ext_resource type="Script" uid="uid://kho87xuiw04i" path="res://Scripts/game_over_zone.gd" id="10_kabln"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p6a4y"]
size = Vector2(32, 1996)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tkyk6"]
size = Vector2(813, 36)

[node name="BoulderDash" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -1)
zoom = Vector2(1.24, 1.24)
script = ExtResource("4_n5s3k")
speed = 15

[node name="HighScore" type="Label" parent="Camera2D"]
z_index = 20
offset_left = 252.0
offset_top = 1.0
offset_right = 395.0
offset_bottom = 50.0
text = "
"
script = ExtResource("7_7btox")

[node name="Background" type="Sprite2D" parent="Camera2D"]
position = Vector2(0, 1)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_fa256")

[node name="SpawnerYPosition" type="Node2D" parent="Camera2D"]
position = Vector2(0, -324)

[node name="FloorSpawner" type="Node2D" parent="Camera2D"]
position = Vector2(0, 291)
script = ExtResource("7_qkw54")

[node name="FloorLimitLeft" type="Node2D" parent="Camera2D/FloorSpawner"]
position = Vector2(-384, -4)

[node name="FloorLimitRight" type="Node2D" parent="Camera2D/FloorSpawner"]
position = Vector2(400, -4)

[node name="FloorSpawnerYPosition" type="Node2D" parent="Camera2D"]
position = Vector2(-1, 321)

[node name="HealthBar" type="Node2D" parent="Camera2D"]
z_index = 20

[node name="4" type="Sprite2D" parent="Camera2D/HealthBar"]
position = Vector2(-377.5, 88)
texture = ExtResource("5_0t2dc")

[node name="3" type="Sprite2D" parent="Camera2D/HealthBar"]
visible = false
position = Vector2(-378.5, 88)
texture = ExtResource("6_nrhpg")

[node name="2" type="Sprite2D" parent="Camera2D/HealthBar"]
visible = false
position = Vector2(-378.5, 88)
texture = ExtResource("7_a077b")

[node name="1" type="Sprite2D" parent="Camera2D/HealthBar"]
visible = false
position = Vector2(-378.5, 88)
texture = ExtResource("8_q463n")

[node name="Walls" type="Node2D" parent="."]
position = Vector2(-572, -305)

[node name="WallLeft" type="StaticBody2D" parent="Walls"]
position = Vector2(154.545, 968)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallLeft"]
shape = SubResource("RectangleShape2D_p6a4y")

[node name="Sprite2D" type="Sprite2D" parent="Walls/WallLeft"]
texture_filter = 1
texture_repeat = 2
position = Vector2(0, -1)
rotation = 1.5708
texture = ExtResource("1_chi5k")
region_enabled = true
region_rect = Rect2(0, 0, 2000, 32)

[node name="WallLeftGround" type="StaticBody2D" parent="Walls"]
position = Vector2(123, 968)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallLeftGround"]
shape = SubResource("RectangleShape2D_p6a4y")

[node name="Sprite2D" type="Sprite2D" parent="Walls/WallLeftGround"]
texture_filter = 1
texture_repeat = 2
position = Vector2(0, -1)
rotation = 1.5708
texture = ExtResource("5_qtvwi")
region_enabled = true
region_rect = Rect2(0, 0, 2000, 32)

[node name="WallRight" type="StaticBody2D" parent="Walls"]
position = Vector2(987.305, 968)
scale = Vector2(-1, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallRight"]
shape = SubResource("RectangleShape2D_p6a4y")

[node name="Sprite2D" type="Sprite2D" parent="Walls/WallRight"]
texture_filter = 1
texture_repeat = 2
position = Vector2(0, -1)
rotation = 1.5708
texture = ExtResource("1_chi5k")
region_enabled = true
region_rect = Rect2(0, 0, 2000, 32)

[node name="WallRightGround" type="StaticBody2D" parent="Walls"]
position = Vector2(1019, 968)
rotation = 3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallRightGround"]
shape = SubResource("RectangleShape2D_p6a4y")

[node name="Sprite2D" type="Sprite2D" parent="Walls/WallRightGround"]
texture_filter = 1
texture_repeat = 2
position = Vector2(0, -1)
rotation = 1.5708
texture = ExtResource("5_qtvwi")
region_enabled = true
region_rect = Rect2(0, 0, 2000, 32)

[node name="MainCharacter" parent="." instance=ExtResource("3_x35cg")]
position = Vector2(3, 14)

[node name="RockSpawner" type="Node2D" parent="."]
position = Vector2(0, -326)
script = ExtResource("4_6li3k")

[node name="Sprite2D" type="Sprite2D" parent="RockSpawner"]
texture = ExtResource("4_iqrwy")

[node name="Timer" type="Timer" parent="RockSpawner"]
wait_time = 0.8
autostart = true

[node name="FallingRocks" type="Node2D" parent="."]

[node name="HardTiles" type="Node2D" parent="."]

[node name="InstructionsLabel" type="Label" parent="."]
offset_left = -364.0
offset_top = -197.0
offset_right = 1846.0
offset_bottom = -100.0
theme = ExtResource("10_j6osf")
theme_override_colors/font_color = Color(0.811765, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Avoid the falling rocks & survive the longest"

[node name="GameOverZone" type="Area2D" parent="." groups=["OutZone"]]
collision_layer = 2
script = ExtResource("10_kabln")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOverZone" groups=["OutZone"]]
position = Vector2(-2.5, -310)
shape = SubResource("RectangleShape2D_tkyk6")

[connection signal="timeout" from="RockSpawner/Timer" to="RockSpawner" method="_on_timer_timeout"]
[connection signal="body_entered" from="GameOverZone" to="GameOverZone" method="_on_body_entered"]
